# autoware_internal_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/: CODEOWNERS  sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  bump-new-version.yaml
autoware_internal_debug_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_internal_debug_msgs/msg/: Float32MultiArrayStamped.msg  Float64MultiArrayStamped.msg  Int32MultiArrayStamped.msg  Int64MultiArrayStamped.msg  MultiArrayLayout.msg  ProcessingTimeNode.msg
autoware_internal_debug_msgs/srv/: SplineDebug.srv  String.srv
autoware_internal_localization_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_internal_localization_msgs/srv/: PoseWithCovarianceStamped.srv
autoware_internal_metric_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_internal_metric_msgs/msg/: Metric.msg  MetricArray.msg
autoware_internal_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_internal_msgs/msg/: PublishedTime.msg
autoware_internal_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_internal_perception_msgs/msg/: CanBusData.msg  SceneInfo.msg  SegmentationMask.msg
autoware_internal_planning_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_internal_planning_msgs/msg/: CandidateTrajectories.msg  CandidateTrajectory.msg  ControlPoint.msg  PathPointWithLaneId.msg  PathWithLaneId.msg  PlanningFactor.msg  PlanningFactorArray.msg  SafetyFactor.msg  SafetyFactorArray.msg  Scenario.msg  ScoredCandidateTrajectories.msg  ScoredCandidateTrajectory.msg  TrajectoryCategoryStatus.msg  TrajectoryMetricStatus.msg  TrajectoryStatus.msg  TrajectoryStatusArray.msg  TrajectoryValidationStatus.msg  VelocityLimit.msg  VelocityLimitClearCommand.msg  VelocityLimitConstraints.msg
autoware_internal_planning_msgs/srv/: LoadPlugin.srv  UnloadPlugin.srv
autoware_internal_rtc_msgs/: CMakeLists.txt  README.md  package.xml
autoware_internal_rtc_msgs/msg/: CooperateCommand.msg  CooperateResponse.msg  CooperateStatus.msg  CooperateStatusArray.msg  State.msg
autoware_internal_rtc_msgs/srv/: CooperateCommands.srv
msg/: MissionRemainingDistanceTime.msg  ResourceUsageReport.msg  SegmentationConfig.msg  SegmentationMask.msg  SystemUsage.msg
tier4_rtc_msgs/: CMakeLists.txt
tier4_rtc_msgs/msg/: CooperateStatus.msg
